@@ -24,6 +24,7 @@ import static uk.gov.hmcts.reform.pip.model.publication.ListType.FTT_TAX_WEEKLY_
 
 @ActiveProfiles("test")
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+@SuppressWarnings("java:S5961")
 class FttTaxWeeklyHearingListConverterTest {
 
     private static final String CONTENT_DATE = "12 December 2024";
@@ -50,6 +51,9 @@ class FttTaxWeeklyHearingListConverterTest {
     private static final String LIST_WELSH_NAME = "Rhestr o Wrandawiadau "
         + "Wythnosol Tribiwnlys Haen Gyntaf (Siambr Treth)";
 
+    private static final String HEARING_DATE = "16 December 2024";
+    private static final String HEARING_VENUE = "This is a venue name";
+
     private static final String HEADER_ELEMENT = "page-heading";
     private static final String LIST_DATE_ELEMENT = "list-date";
     private static final String LAST_UPDATED_DATE_ELEMENT = "last-updated-date";
@@ -67,6 +71,7 @@ class FttTaxWeeklyHearingListConverterTest {
     private static final String IMPORTANT_INFORMATION_MESSAGE = "Important information heading does not match";
     private static final String BODY_MESSAGE = "Body does not match";
     private static final String TABLE_HEADERS_MESSAGE = "Table headers does not match";
+    private static final String TABLE_CONTENT_MESSAGE = "Table content does not match";
 
     private final NonStrategicListFileConverter converter = new NonStrategicListFileConverter();
 
@@ -120,7 +125,7 @@ class FttTaxWeeklyHearingListConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Last updated 20 January 2025 at 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Important information");
 
@@ -162,6 +167,27 @@ class FttTaxWeeklyHearingListConverterTest {
                 "Judge(s)",
                 "Member(s)",
                 "Venue/Platform"
+            );
+
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(14)
+            .extracting(Element::text)
+            .containsExactly(
+                HEARING_DATE,
+                "10:15am",
+                "This is a case name",
+                "1234",
+                "Judge A",
+                "Member A",
+                HEARING_VENUE,
+                HEARING_DATE,
+                "10:30am",
+                "This is another case name",
+                "1235",
+                "Judge B",
+                "Member B",
+                HEARING_VENUE
             );
 
         softly.assertAll();
@@ -206,7 +232,7 @@ class FttTaxWeeklyHearingListConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Diweddarwyd ddiwethaf 20 January 2025 am 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Gwybodaeth bwysig");
 
@@ -250,6 +276,27 @@ class FttTaxWeeklyHearingListConverterTest {
                 "Barnwr/Barnwyr",
                 "Aelod(au)",
                 "Lleoliad/Platfform"
+            );
+
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(14)
+            .extracting(Element::text)
+            .containsExactly(
+                HEARING_DATE,
+                "10:15am",
+                "This is a case name",
+                "1234",
+                "Judge A",
+                "Member A",
+                HEARING_VENUE,
+                HEARING_DATE,
+                "10:30am",
+                "This is another case name",
+                "1235",
+                "Judge B",
+                "Member B",
+                HEARING_VENUE
             );
 
         softly.assertAll();
